# Python_API_Challenge

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python-api/: Makefile  pyproject.toml  requirements-dev.txt
python-api/src/: config.py
python-api/src/models/: db.py  plant.py
python-api/src/repositories/: __init__.py
python-api/src/resources/: partners.py
python-api/src/routes/: partners.py  plant.py
python-api/src/swagger/partner/: GET.yml
python-api/src/swagger/partners/: POST.yml
python-api/src/test/: __init__.py  test_swagger_coverage.py
python-api/src/util/: cep.py  cnpj.py
react-app/: Makefile  package-lock.json  package.json  tsconfig.json
react-app/public/: index.html  styles.css
react-app/src/: index.tsx
react-app/src/components/: App.css  App.tsx
react-app/src/components/Modal/: Modal.css  Modal.tsx
src/: config.py  database.db  dev.db  server.py
src/models/: __init__.py  abc.py  partner.py  plant.py
src/repositories/: __init__.py  partner.py  plant.py
src/resources/: __init__.py  partner.py  partners.py  plant.py  plants.py
src/routes/: __init__.py  partner.py  partners.py  plant.py  plants.py
src/swagger/partner/: DELETE.yml  PUT.yml
src/swagger/partners/: GET.yml
src/swagger/plant/: DELETE.yml  GET.yml  PUT.yml
src/swagger/plants/: GET.yml  POST.yml
src/test/: __init__.py  test_partner.py  test_partners.py  test_plant.py  test_plants.py  test_swagger.py  test_swagger_coverage.py
src/util/: __init__.py  cnpj.py
(+5 files in other folders)
