[tool.poetry]
name = "python-api-challenge"
version = "1.1.3"
description = "Back-end Flask REST API"
authors = ["ArielMAJ <ariel.maj@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.2.3"
flask_sqlalchemy = "3.0.3"
flask_restful = "0.3.9"
python-dotenv = "1.0.0"
werkzeug = "2.2.3"
validate-docbr = "1.10.0"
pyisemail = "2.0.1"
requests = "2.28.2"
flasgger = "0.9.5"
flask_cors = "3.0.10"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
mypy = "1.1.1"
pylint = "2.17.2"
isort = "5.12.0"
flake8 = "6.1.0"

[tool.black]
target-version = ['py311']
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
